Fixed error causing elements to overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -94,3 +94,11 @@
   background-size: cover;
   background-repeat: repeat;
 }
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
